--- a/package.json
+++ b/package.json
@@ -6,35 +6,37 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "npx expo start"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
-    "expo": "^45.0.0",
-    "expo-app-loading": "~2.0.0",
-    "expo-font": "^10.1.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "expo": "^46.0.0",
+    "expo-app-loading": "~2.1.0",
+    "expo-font": "~10.2.0",
+    "expo-splash-screen": "~0.16.1",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-calendars": "^1.1288.2",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@babel/core": "^7.18.6",
+    "@types/react": "^18.0.18",
+    "@types/react-native": "^0.69.6",
     "@types/styled-components-react-native": "^5.1.3",
     "react-native-svg-transformer": "^1.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "private": true
 }
