--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "dev": "npx expo start"
+    "dev": "npx expo start",
+    "server": "json-server ./src/services/server.json --host 192.168.1.5 --port 3333 --delay 700"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "expo": "^46.0.0",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
+    "json-server": "^0.17.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
